# antigen-v1

./: Cargo.toml  TODO
antigen/: Cargo.toml
antigen_curses/: Cargo.toml
antigen_test/: Cargo.toml  TODO
antigen_test/src/: cpu_shader.rs  main.rs  pancurses_color.rs  pancurses_keys.rs  system_runner.rs  unboxed_test.rs
antigen_test/src/assemblage/: component_builders.rs  mod.rs
antigen_test/src/components/: control_component.rs  destruction_test_input.rs  destruction_test_input_component.rs  fill_component.rs  input_axis.rs  input_axis_component.rs  list_component.rs  local_mouse_position_component.rs  mod.rs  pancurses_color_component.rs  pancurses_color_pair_component.rs  pancurses_color_set_component.rs  pancurses_control_component.rs  pancurses_input_axis_component.rs  pancurses_input_buffer_component.rs  pancurses_mouse_component.rs  pancurses_prev_next_input_component.rs  pancurses_window_component.rs
antigen_test/src/scenes/: antigen_debug_scene.rs  dependency_test_scene.rs  minimal_test_scene.rs  mod.rs
antigen_test/src/systems/: debug_tab_system.rs  destruction_test_input.rs  destruction_test_input_system.rs  input_axis.rs  input_axis_system.rs  input_system.rs  input_velocity.rs  input_velocity_system.rs  list_system.rs  local_mouse_position_system.rs  mod.rs  pancurses_input_axis_system.rs  pancurses_input_buffer_system.rs  pancurses_input_system.rs  pancurses_keyboard_system.rs  pancurses_mouse_system.rs  pancurses_prev_next_input_system.rs  pancurses_renderer_system.rs  pancurses_window_system.rs  quit_key.rs  quit_key_system.rs  quit_system.rs
(+261 files in other folders)
