[package]
name = "antigen_test"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antigen = { path = "../antigen" }
antigen_curses = { path = "../antigen_curses" }
store = { path = "../../store_v2/store" }